getting ready for publish

--- a/js-interpreter/package.json
+++ b/js-interpreter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tilde-ath",
+  "name": "untildeath",
   "version": "1.0.0",
   "description": "JavaScript interpreter for the !~ATH esoteric programming language",
   "main": "src/index.js",
@@ -18,7 +18,6 @@
     "homestuck"
   ],
   "author": "",
-  "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
   }
