--- a/interpreter/pyproject.toml
+++ b/interpreter/pyproject.toml
@@ -8,12 +8,12 @@ version = "1.0.0"
 description = "!~ATH (Until Death) - An esoteric programming language interpreter"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
+license = {text = "GPL-2.0-only"}
 keywords = ["esoteric", "programming-language", "interpreter", "ath"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
